2006-09-18  Stefan Jahn  <stefan@lkcc.org>

	* ucs.cpp (main): Using new environment functionality in order
	to solve the root environment equations.

	* input.cpp: Passing the netlist checker its environment.

	* evaluate.cpp: Replaced references to static functions of
	the solver.

	* equation.cpp: Removed all global data concerning the
	equations.  Both checker and solver are now fully self-contained
	and can be instantiated as many as needed.  This is one more
	step to local equations in subcircuits.

	* environment.cpp: Added functionality which enables an
	environment to contains equations which can be checked and
	solved.

	* check_netlist.cpp: Passing equations, their checker and
	solver to the root environment.

2006-09-17  Stefan Jahn  <stefan@lkcc.org>

	* parse_netlist.y, check_netlist.cpp: Preparations to have
	equations inside subcircuits.

2006-09-11  Stefan Jahn  <stefan@lkcc.org>

	* parse_zvr.y, parse_mdl.y (__NOEXTENSIONS__): Added this #define
	for MacOSX systems to inhibit symbol clash.

	* parse_netlist.y, check_netlist.cpp: Implemented definition of
	subcircuit properties in the parser and checker.

2006-09-06  Stefan Jahn  <stefan@lkcc.org>

	* transient.cpp, integrator.cpp (conductor): Added functionality
	calculating the equivalent conductance separately.

	* circuit.cpp: Implemented a one-node variant for the function
	transientCapacitance().  Also added some variants of this function
	which consider the possibility that a charge depends on a
	different voltage than where it is located.  Then the
	transientCapacitance() is split into transientCapacitanceQ() and
	transientCapacitanceC().

2006-09-03  Stefan Jahn  <stefan@lkcc.org>

	* scan_mdl.l, parse_mdl.y: Implemented many more of the MDL
	grammar and syntax which I wasn't aware before.

	* dataset.cpp: Fixed a bug when deleting the last variable or
	dependency in a dataset.

	* check_mdl.cpp: Emit warnings when variables cannot be
	resolved (no equation solver implemented).